--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 								<h1>I'm Jeeno</h1>
 								<p>Student in Information Technology</p>
 								<div class="extra-space-l"></div>
-								<a class="btn btn-blank" href="<?php echo site_url('geeno/geeno1');?>" target="_blank" role="button">View More!</a>
+								<a class="btn btn-blank" href="geeno1_view.html" target="_www" role="button">View More!</a>
 							</div>
 							<div class="item">
 								<h1>Study At Rajamangala University of Technology LannaTak</h1>
@@ -334,7 +334,7 @@
                         <!-- Cta Button -->
                         <div class="extra-space-l"></div>
                         <div class="text-center">
-                    		<a class="btn btn-default btn-lg-xl" href="<?php echo site_url('geeno/geeno2');?>" target="_blank" role="button">ดูข้อมูลเพิ่มเติม</a>
+                    		<a class="btn btn-default btn-lg-xl" href="geeno2_view.html" target="_www" role="button">ดูข้อมูลเพิ่มเติม</a>
                         </div>
                     </div> <!-- /.container -->                       
                 </div>
