--- a/geeno1_view.html
+++ b/geeno1_view.html
@@ -108,7 +108,7 @@
 								<h1>Welcome to Website</h1>
 								<p>Profile Panuwat Saisurin</p>
                                 <div class="extra-space-l"></div>
-								<a class="btn btn-blank" href="https://creativemarket.com/Themetorium" target="_blank" role="button">View More!</a>
+								<a class="btn btn-blank" href="https://www.facebook.com/panuwat.saisurin</a>
 							</div>
 							<div class="item">
 								<h1>I'm Jeeno</h1>
@@ -612,7 +612,7 @@
                                 <div class="contact-info">
                                     <h4>Our Address</h4>
                                     <ul class="contact-address">
-			                            <li><i class="fa fa-map-marker fa-lg"></i>&nbsp; 201/2 หมู่ 1 ต.แม่วะ อ.เถิน จ.ลำปาง,<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; New World Tower New York ,<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; New York, USA, 33148</li>
+			                            <li><i class="fa fa-map-marker fa-lg"></i>&nbsp; 201/2 หมู่ 1 ต.แม่วะ อ.เถิน จ.ลำปาง,<br><br></li>
 			                            <li><i class="fa fa-phone"></i>&nbsp; 093-227-9149</li>
 			                            <li><i class="fa fa-envelope"></i> panuwatgeeno@yourdomain.com</li>
 			                        </ul>
