--- a/geeno1_view.html
+++ b/geeno1_view.html
@@ -108,7 +108,7 @@
 								<h1>Welcome to Website</h1>
 								<p>Profile Panuwat Saisurin</p>
                                 <div class="extra-space-l"></div>
-								<a class="btn btn-blank" href="https://www.facebook.com/panuwat.saisurin"</a>
+								<a class="btn btn-blank" href="https://www.facebook.com/panuwat.saisurin" target="_blank" role="button">View More!</a>
 							</div>
 							<div class="item">
 								<h1>I'm Jeeno</h1>
